# conrec-wasm-rust

./: .gitignore  Cargo.toml  README.md  js_results.txt  package-lock.json  results.txt
src/: basic_contour_drawer.rs  calculate_contour.rs  conrec.rs  contour_builder.rs  lib.rs  main.rs  shape_contour_drawer.rs
tests/: web.rs
www/: benchmark.mjs  conrec.mjs  file.mjs  index.html  index.js  jsconrec.js  package-lock.json  package.json  test.js
