[package]
name = "conrec-wasm"
version = "0.1.0"
authors = ["Eiafuawn <kenan.henzelin@proton.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
web = []

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde = { version = "1.0.213", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.72"
web-sys = { version = "0.3.72", features = ["console"] }
serde_json = "1.0.132"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
opt-level = 3
lto = "fat"           # Full LTO for maximum inlining
codegen-units = 1     # Single codegen unit for better optimization
panic = "abort"       # Eliminate panic handling overhead
overflow-checks = false # Disable integer overflow checks

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-mutable-globals"]

[[bin]]
name = "conrec_wasm"
path = "src/main.rs"
